# local-render-suite

./: README.md
desktop/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: main.ts  styles.css  subtitle-animations.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
