[package]
name = "local-render-suite-desktop"
version = "0.1.0"
description = "Local render task desktop client"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1.40.0", features = ["fs", "macros", "rt-multi-thread"] }
